--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <p>with Javascript js, PHP, HTML, CSS and java</p>
           </div>
           <div class="project-img">
-            <img src="./img/img2.png" alt="img">
+            <img src="./img2.png" alt="img">
           </div>
         </div>
         <div class="project-item">
@@ -104,7 +104,7 @@
             <p>With javascript js, PHP, HTML, CSS, AngularJS</p>
           </div>
           <div class="project-img">
-            <img src="./img/img1.png" alt="img">
+            <img src="./img1.png" alt="img">
           </div>
         </div>
        
@@ -119,7 +119,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/12.jpg" alt="img">
+          <img src="./12.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
