--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2> Front-End</h2>
-          <p> Html, Css, React, Bootstrap</p>
+          <p>Angular, HTML, CSS,JavaScript React, Bootstrap</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2> Back-End</h2>
-          <p> JavaScript, PHP, MySQL, Java</p>
+          <p> NodeJs, MongoDB, PHP, MySQL, Java</p>
         </div>
         <div class="service-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
           <h2> Design</h2>
-          <p> Photoshop, Adobe xd, Adobe Photoshop</p>
+          <p> Photoshop, Adobe xd, Adobe Illustrator</p>
         </div>
        
       </div>
@@ -89,7 +89,7 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Web Development</h1>
+            <h1>mobile Web Development</h1>
             <h2>E-commerce </h2>
             <p>with Javascript js, PHP, HTML, CSS and java</p>
           </div>
@@ -101,7 +101,7 @@
           <div class="project-info">
             <h1>Web Development</h1>
             <h2>Short URL</h2>
-            <p>With javascript js, PHP, HTML, CSS, AngularJS</p>
+            <p>With javascript js, PHP, HTML, CSS, Angular</p>
           </div>
           <div class="project-img">
             <img src="./img1.png" alt="img">
